--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,21 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = { version = "1.0.91", features = ["backtrace"] }
+clap = "4.5.20"
+educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
+flume = "0.11.1"
+paho-mqtt = "0.12.5"
+parking_lot = "0.12.3"
+rand = "0.8.5"
+serde = { version = "1.0.213", features = ["derive"] }
+serde_json = "1.0.132"
+thiserror = "1.0.65"
+tokio = { version = "1.41.0", features = ["macros", "parking_lot", "rt-multi-thread", "time"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+
+[profile.release]
+lto = true
+codegen-units = 1
+strip = true
