--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = { version = "1.0.91", features = ["backtrace"] }
-clap = "4.5.20"
+clap = { version = "4.5.20", features = ["derive"] }
+clap-verbosity-flag = "2.2.2"
 educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
 flume = "0.11.1"
 paho-mqtt = "0.12.5"
@@ -16,6 +17,7 @@ serde_json = "1.0.132"
 thiserror = "1.0.65"
 tokio = { version = "1.41.0", features = ["macros", "parking_lot", "rt-multi-thread", "time"] }
 tracing = "0.1.40"
+tracing-log = "0.2.0"
 tracing-subscriber = "0.3.18"
 
 [profile.release]
