--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = { version = "1.0.91", features = ["backtrace"] }
+chrono = "0.4.38"
 clap = { version = "4.5.20", features = ["derive"] }
 clap-verbosity-flag = "2.2.2"
 educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
@@ -13,6 +14,7 @@ parking_lot = "0.12.3"
 rand = "0.8.5"
 serde = { version = "1.0.213", features = ["derive"] }
 serde_json = "1.0.132"
+serde_with = { version = "3.11.0", features = ["chrono"] }
 thiserror = "1.0.65"
 tokio = { version = "1.41.0", features = ["macros", "parking_lot", "rt-multi-thread", "time"] }
 tracing = "0.1.40"
