--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,14 @@
 [workspace]
-members = ["smart-homes"]
+members = ["http-api", "smart-homes"]
 resolver = "2"
+
+[workspace.dependencies]
+tokio = { version = "1.41.0", features = ["macros", "parking_lot", "rt-multi-thread", "time"] }
+paho-mqtt = "0.12.5"
+clap = { version = "4.5.20", features = ["derive"] }
+clap-verbosity-flag = "2.2.2"
+anyhow = { version = "1.0.91", features = ["backtrace"] }
+serde_json = "1.0.132"
 
 [profile.release]
 lto = true
